# automate-google-forms

./: .gitignore  README.md  cred.py  log.py  main.py  pyproject.toml  requirements.txt  service_template.py  settings.py  utils.py
.github/workflows/: lint.yml
